Новогодние спецэффекты снега

--- a/Django/templates/authorization.html
+++ b/Django/templates/authorization.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load sass_tags %}
 
 {% block css_style %}
-<link rel="stylesheet" href=" {% static 'background.css' %}">
-<link rel="stylesheet" href=" {% static 'button.css' %}">
-<link rel="stylesheet" href=" {% static 'auth.css' %}">
-<link rel="stylesheet" href=" {% static 'error.css' %}">
-<link rel="stylesheet" href=" {% static 'input.css' %}">
+<link rel="stylesheet" href=" {% static 'css/background.css' %}">
+<link rel="stylesheet" href=" {% static 'css/button.css' %}">
+<link rel="stylesheet" href=" {% static 'css/auth.css' %}">
+<link rel="stylesheet" href=" {% static 'css/error.css' %}">
+<link rel="stylesheet" href=" {% static 'css/input.css' %}">
 {% endblock %}
 
 {% block tabMenu %}
@@ -19,17 +20,19 @@
 {% endblock %}
 
 {% block content %}
+
+
 <!-- Форма входа/регистрации -->
-<form id="auth-form" class="tab-content active" method="POST">
+<form id="auth-form" class="tab-content snow-accumulate active" style="z-index: 3;" method="POST">
     {% csrf_token %}
     <input type="hidden" id="form_act" name="form_act" value="{{ form_act|default:'login' }}">
 
     <h3 id="title-form">Вход</h3>
     <label>
-        <input type="text" name="username" maxlength="30" id="id_username" placeholder="Логин" required>
+        <input class="snow-accumulate" type="text" name="username" maxlength="30" id="id_username" placeholder="Логин" required>
         <input type="password" name="password1" minlength="1" id="id_password1" placeholder="Пароль" required>
 
-        <span id="register-form" class="{% if form_act == 'register' %}visible{% else %}hidden{% endif %}">
+        <span  id="register-form" class="{% if form_act == 'register' %}visible{% else %}hidden{% endif %}">
             <input type="password" name="password2" minlength="1" id="password2"
                    placeholder="Повторите пароль">
         </span>
@@ -46,7 +49,6 @@
     <p class="message">{{ message }}</p>
     {% endif %}
 </form>
-
 
 <script>
     function openTab(tabName) {
