--- a/Django/templates/base.html
+++ b/Django/templates/base.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <title>{{ TitlePage }}</title>
-
     {% block css_style %}
     {% endblock %}
 </head>
 <body>
+
+<!-- Задний canvas -->
+<canvas id="snow-canvas-back" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 996;"></canvas>
+
 <header>
     <div class="tab-headerLeft">
         {% if btnHomeVisible %}
@@ -19,19 +23,44 @@
 
     <div class="tab-headerRight">
         {% block tabMenu %}
-
         {% endblock %}
+
         {% if btnAuthenticatedVisible %}
-            {% if request.user.is_authenticated %}
-            <div class="fButton" onclick="window.location.href='/logout/'">Выйти из {{ request.user.username }}</div>
-            {% else %}
-            <div class="fButton" onclick="window.location.href='/'">Вход</div>
-            {% endif %}
+        {% if request.user.is_authenticated %}
+        <div class="fButton" onclick="window.location.href='/logout/'">Выйти из {{ request.user.username }}</div>
+        {% else %}
+        <div class="fButton" onclick="window.location.href='/'">Вход</div>
+        {% endif %}
         {% endif %}
     </div>
 </header>
 
-{% block content %}
-{% endblock %}
+<div class="container">
+
+    <!-- Отобразить только на странице -->
+    {% if request.path == '/index/' and request.user.is_authenticated %}
+
+    {% endif %}
+
+    {% block content %}
+    {% endblock %}
+
+</div>
+
+<!-- Передний canvas -->
+<canvas id="snow-canvas-front" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 1000;"></canvas>
+
+<!-- Новогодние спецэффекты -->
+<script>
+    // Получаем текущий месяц
+    const currentMonth = new Date().getMonth() + 1;
+
+    // Проверяем, если месяц - декабрь
+    if (currentMonth === 12 || currentMonth === 1) {
+        const script = document.createElement('script');
+        script.src = '{% static "js/snowfall.js" %}';
+        document.body.appendChild(script);
+    }
+</script>
 </body>
 </html>
